# react-native-salve-db

./: .clangd  .gitignore  LICENSE  NitroSalveDb.podspec  README.md  SalveDb.podspec  compile_flags.txt  jest.config.js  nitro.json  package-lock.json  package.json  skills-lock.json  tsconfig.build.json  tsconfig.json  tsconfig.typetest.json
.clangd-headers/: sqlite3.h
.clangd-headers/NitroModules/: AssertPromiseState.hpp  BorrowingReference.hpp  CachedProp.hpp  CallInvokerDispatcher.hpp  CommonGlobals.hpp  CountTrailingOptionals.hpp  Dispatcher.hpp  FastVectorCopy.hpp  FutureType.hpp  HybridNitroModulesProxy.hpp  HybridObjectPrototype.hpp  HybridObjectRegistry.hpp  InstallNitro.hpp  InstanceMethod.hpp  IsSharedPtrTo.hpp  JSCallback.hpp  JSICache.hpp  JSIConverter+AnyMap.hpp  JSIConverter+ArrayBuffer.hpp  JSIConverter+Date.hpp  JSIConverter+Exception.hpp  JSIConverter+Function.hpp  JSIConverter+HostObject.hpp  JSIConverter+NativeState.hpp  JSIConverter+Null.hpp  JSIConverter+Optional.hpp  JSIConverter+Promise.hpp  JSIConverter+Tuple.hpp  JSIConverter+UnorderedMap.hpp  JSIConverter+Variant.hpp  JSIConverter+Vector.hpp  JSIConverter.hpp  JSIHelpers.hpp  NitroDefines.hpp  NitroHash.hpp  NitroLogger.hpp  NitroTypeInfo.hpp  PromiseType.hpp  PropNameIDCache.hpp  Prototype.hpp  (+7 more)
.claude/: CLAUDE.md
.claude/rules/: native-tests.md
.claude/skills/: react-native-harness
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: harness-android.yml  harness-ios.yml  ios-build.yml
__typetests__/: customer-schema.type-test.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: BackgroundSchedulerJni.cpp  JniSupport.cpp  JniSupport.hpp  SyncConnectivityJni.cpp  cpp-adapter.cpp  http_client_jni.cpp  platform_android.cpp  platform_android_http.cpp  platform_android_http.hpp
android/src/main/java/com/margelo/nitro/salvedb/: NitroSalveDbPackage.kt
android/src/main/java/com/salvedb/: BackgroundScheduleDecision.kt  SalveDbBackgroundScheduler.kt  SalveDbBackgroundWorker.kt  SalveDbConnectivityMonitor.kt  SalveDbHttpClient.kt  SalveDbPackage.kt  SalveDbSecureStorage.kt  SyncTriggerDebouncer.kt
android/src/main/java/com/salvedb/http/: HttpAdapterRequest+toOkHttpRequest.kt  HttpAdapterRequest.kt  HttpResult.kt  NetworkErrorKind.kt  OkHttpAdapter.kt  OkHttpJniBridge.kt  Response+toHttpResult.kt  Response+toSalveDbHttpOutcome.kt  SalveDbHttpErrorKind.kt  SalveDbHttpJniResult.kt  SalveDbHttpMethod.kt  SalveDbHttpOutcome.kt  SalveDbHttpRequest+toOkHttpRequest.kt  SalveDbHttpRequest.kt
android/src/test/java/com/salvedb/: BackgroundScheduleDecisionTest.kt  SalveDbHttpClientTest.kt  SyncTriggerDebouncerTest.kt
android/src/test/java/com/salvedb/http/: OkHttpAdapterTest.kt
cpp/: HybridSalveDatabase.cpp  HybridSalveDb.cpp  HybridSalveDb.hpp  HybridSalveQuery.cpp  HybridSalveQuery.hpp  HybridSalveSync.cpp
cpp/credentials/: CredentialProvider.cpp  CredentialProvider.hpp
cpp/database/: BackgroundConfig.hpp  DatabaseManager.cpp  DatabaseManager.hpp  HybridSalveDatabase.cpp  HybridSalveDatabase.hpp  MigrationEngine.cpp  MigrationEngine.hpp  NativeConfigStore.cpp  NativeConfigStore.hpp  SQLiteConnection.cpp  SQLiteConnection.hpp  SalveMetadataManager.cpp  SalveMetadataManager.hpp  SchemaRegistry.cpp  SchemaRegistry.hpp  json_parser.hpp  platform.hpp
cpp/expression/: JsonPathExtractor.cpp  JsonPathExtractor.hpp  RequestExpressionEvaluator.cpp  RequestExpressionEvaluator.hpp
cpp/http/: CredentialHttpCaller.cpp  CredentialHttpCaller.hpp  HttpTypes.hpp  HttpUrlBuilder.cpp  HttpUrlBuilder.hpp  IHttpClient.hpp  NetworkConfig.cpp  NetworkConfig.hpp  SyncHttpCaller.cpp  SyncHttpCaller.hpp
cpp/platform/: platform.hpp  platform_android_jni.hpp
cpp/query/: HybridSalveQuery.cpp  QueryExecutor.cpp  QueryExecutor.hpp
cpp/sync/: HybridSalveSync.hpp  RelationCascadeRewriter.cpp  RelationCascadeRewriter.hpp  RelationStore.cpp  RelationStore.hpp  SyncApplyGuard.cpp  SyncApplyGuard.hpp  SyncCursorStore.cpp  SyncCursorStore.hpp  SyncDefinitionRegistry.cpp  SyncDefinitionRegistry.hpp  SyncDefinitionStore.cpp  SyncDefinitionStore.hpp  SyncNativeEntryPoint.cpp  SyncNativeEntryPoint.hpp  SyncOperationApplier.cpp  SyncOperationApplier.hpp  SyncOrchestrator.cpp  SyncOrchestrator.hpp  SyncQueueReader.cpp  SyncQueueReader.hpp
cpp/tests/: CMakeLists.txt  run.sh
cpp/tests/credentials/: CredentialProviderTests.cpp
cpp/tests/database/: DatabaseManagerReopenTests.cpp  HybridSalveDatabaseBackgroundConfigTests.cpp  HybridSalveDatabaseCredentialsTests.cpp  HybridSalveDatabaseNetworkTests.cpp  HybridSalveDatabaseSyncTests.cpp  HybridSalveDatabaseTests.cpp  JsonParserTests.cpp  MigrationEngineTests.cpp  NativeConfigStoreTests.cpp  SQLiteConnectionChangeNotificationTests.cpp  SQLiteConnectionConcurrencyTests.cpp  SQLiteConnectionWalModeTests.cpp
cpp/tests/expression/: JsonPathExtractorTests.cpp  RequestExpressionEvaluatorTests.cpp
cpp/tests/http/: CredentialHttpCallerTests.cpp  HttpUrlBuilderTests.cpp  NetworkConfigTests.cpp  SyncHttpCallerTests.cpp
cpp/tests/query/: QueryExecutorTests.cpp  README.md
cpp/tests/support/: FakeHttpClient.hpp  HybridDatabaseHarness.hpp  TestDispatcher.hpp  platform_test.cpp  platform_test.hpp
cpp/tests/sync/: README.md  RelationCascadeRewriterTests.cpp  RelationStoreTests.cpp  SalveMetadataManagerTests.cpp  SyncApplyGuardTests.cpp  SyncCursorStoreTests.cpp  SyncDefinitionRegistryTests.cpp  SyncDefinitionStoreTests.cpp  SyncNativeEntryPointTests.cpp  SyncOperationApplierTests.cpp  SyncOrchestratorTests.cpp  SyncQueueReaderTests.cpp
docs/: architecture.md  mvp-scope.md  native-layer.md  overview.md  project.md  query-layer.md
example/: App.tsx  Gemfile  app.json  jest.config.js  package.json  rn-harness.config.mjs  tsconfig.json
ios/: Bridge.h  HttpAdapterOutcome.swift  HttpAdapterRequest.swift  HttpClientBridge.mm  NetworkErrorKind+from.swift  NetworkErrorKind+toObjC.swift  NetworkErrorKind.swift  PlatformHttp.mm  SalveDbPlatform.mm  URLSessionAdapter+IHttpClientProtocol.swift  URLSessionAdapter.swift
src/: Database.ts  index.ts
(+303 files in other folders)
